[package]
name = "lehua"
version = "0.1.2"
edition = "2021"
rust-version = "1.80"
description = "Lehua — the next-generation Luau runtime: compiled, multithreaded, batteries-included."
license = "MIT"

[[bin]]
name = "lehua"
path = "src/main.rs"

[dependencies]
mlua = { version = "0.12", features = ["luau-jit", "async", "error-send", "serialize"] }
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
async-channel = "2.5"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
toml = "1.1"
chrono = "0.4"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
hex = "0.4"
crc32fast = "1.4"
getrandom = "0.3"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
argon2 = "0.5"
regex = "1"
url = "2"
percent-encoding = "2"
semver = "1"
glob = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }
mongodb = "3"
futures-util = "0.3"
libloading = "0.9"
flate2 = "1.1"
base64 = "0.22"
anyhow = "1.0"
thiserror = "2.0"
sysinfo = "0.39"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
